--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/main.css">
 
-    <title>widyantoro</title>
+    <title>Cindi Anarawan</title>
   </head>
   <body>
 
