--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/main.css">
 
-    <title>Cindi Anarawan</title>
+    <title>cindi anarawan</title>
   </head>
   <body>
 
@@ -105,8 +105,47 @@
            <td>NIM</td>
            <td>203210006</td>
            </tr>
-   
-    
+    </table>
+    <!-- kontak -->
+    <div class="container-fluid text-center main-kontak" id="kontak">
+      <div class="row justify-content-center">
+        <div class="col-12 text-uppercase">
+          <h4>kontak saya</h4>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-sm-1 col-2">
+          <a href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=widy45rr@gmail.com">
+            <img src="images/001-gmail.png" alt="" class="img-fluid">
+          </a>
+        </div>
+        <div class="col-sm-1 col-2">
+          <a href="#!">
+            <img src="images/002-facebook.png" alt="" class="img-fluid">
+          </a>
+        </div>
+        <div class="col-sm-1 col-2">
+          <a href="#" target="_blank">
+            <img src="images/003-instagram.png" alt="" class="img-fluid">
+          </a>
+        </div>
+        <div class="col-sm-1 col-2">
+          <a href="#">
+            <img src="images/004-whatsapp.png" alt="" class="img-fluid">
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!--  footer finaly :D -->
+    <div class="container-fluid text-center main-footer">
+      <div class="row">
+        <div class="col-12">
+          &copy; copyright 2021 All Rights Reserved. By CIndi Anarawan
+        </div>
+      </div>
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="javascript/jquery-3.2.1.slim.min.js"></script>
